:sparkles: Fixed linting temporarely

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,4 +1,4 @@
-name: Linting
+name: Ruby
 
 on:
   pull_request:
@@ -11,6 +11,6 @@ jobs:
     - name: Getting files from GitHub
       uses: actions/checkout@v1
     - name: Rubocop Linter
-      uses: andrewmcodes/rubocop-linter-action@v1.0.6
+      uses: andrewmcodes/rubocop-linter-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
