:sparkles: Fixed linting temporarely

--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -15,8 +15,8 @@ jobs:
         sudo apt-get install build-essential libsdl2-dev libgl1-mesa-dev libopenal-dev \
                       libsndfile-dev libmpg123-dev libgmp-dev libfontconfig1-dev
         sudo apt-get install ruby-dev
-        gem install bundler
-        bundle install --jobs 4 --retry 3
+        sudo gem install bundler
+        sudo bundle install --jobs 4 --retry 3
     - name: Rubocop Linter
       uses: andrewmcodes/rubocop-linter-action@v1.0.0
       env:
